--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/JustinSGardner/CapStoneProject-Backend/issues"
   },
-  "homepage": "https://github.com/JustinSGardner/CapStoneProject-Backend#readme"
+  "homepage": "https://github.com/JustinSGardner/CapStoneProject-Backend#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.11"
+  }
 }
